# confoo-2024

./: .gitignore  README.md  api_add_user.py  api_get_users.py  app.py  lambda_function.py  pyproject.toml  requirements.txt
templates/: new_user.html
